@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>net.mov51</groupId>
-    <artifactId>AspenRenewables</artifactId>
+    <groupId>mov.naspen</groupId>
+    <artifactId>NaspenRenewables</artifactId>
     <version>1.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>AspenRenewables</name>
+    <name>NaspenRenewables</name>
 
     <properties>
         <java.version>17</java.version>
@@ -25,7 +25,6 @@
                 <configuration>
                     <source>17</source>
                     <target>17</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
